# ParityGameSolver

./: .gitignore  CMakeLists.txt  DataPrinter.cpp  DataPrinter.h  NaturalSort.h  README.md  TextTable.h  main.cpp
gameAlgorithms/: CMakeLists.txt
gameAlgorithms/inc/: AlternativeWorkingListOrderer.h  FixedOrdering.h  ImprovedWorkingListOrderer.h  Orderer.h  Ordering.h  OtherWorkingListOrderer.h  ProgressMeasuresAlgo.h  WorkingListOrderer.h
gameAlgorithms/src/: AlternativeWorkingListOrdered.cpp  FixedOrdering.cpp  ImprovedWorkingListOrderer.cpp  Ordering.cpp  OtherWorkingListOrderer.cpp  ProgressMeasuresAlgo.cpp  WorkingListOrderer.cpp
parsing/: CMakeLists.txt
parsing/inc/: Node.h  ParityGame.h  Parser.h  ProgressMeasure.h
parsing/src/: Node.cpp  ParityGame.cpp  Parser.cpp  ProgressMeasure.cpp
resources/ccp_games/: german_linear_2.infinite_run_no_access.gm  german_linear_2.invariantly_eventually_fair_shared_access.gm  german_linear_3.infinite_run_no_access.gm  german_linear_4.infinite_run_no_access.gm
resources/dining_games/: dining_2.invariantly_inevitably_eat.gm  dining_2.invariantly_plato_starves.gm  dining_2.plato_infinitely_often_can_eat.gm  dining_3.invariantly_inevitably_eat.gm  dining_3.invariantly_possibly_eat.gm  dining_5.invariantly_possibly_eat.gm  dining_6.invariantly_inevitably_eat.gm  dining_7.invariantly_plato_starves.gm  dining_8.invariantly_inevitably_eat.gm  dining_8.invariantly_possibly_eat.gm  dining_9.invariantly_inevitably_eat.gm  dining_9.invariantly_plato_starves.gm
resources/dining_games/part_1/: dining_3.plato_infinitely_often_can_eat.gm  dining_4.invariantly_plato_starves.gm  dining_4.invariantly_possibly_eat.gm  dining_4.plato_infinitely_often_can_eat.gm  dining_5.invariantly_inevitably_eat.gm  dining_5.invariantly_plato_starves.gm  dining_5.plato_infinitely_often_can_eat.gm  dining_6.invariantly_possibly_eat.gm  dining_7.invariantly_possibly_eat.gm  dining_7.plato_infinitely_often_can_eat.gm
resources/dining_games/part_2/: dining_8.invariantly_plato_starves.gm  dining_8.plato_infinitely_often_can_eat.gm
resources/elevator_games/: elevator1_2.gm  elevator1_4.gm  elevator1_5.gm  elevator2_2.gm  elevator2_5.gm
resources/ex3/: fig3.gm  fig4.gm  fig7.gm  fig8.gm
resources/manual/: Lots_of_single_selfloops.gm  slide12_example.gm  slide_example.gm  test_case_5.gm
unit_testing/: AlgorithmChecking.cpp  CMakeLists.txt  ParityGameChecking.cpp  ProgressMeasureAlgoChecking.cpp  ProgressMeasureChecking.cpp  ex3Checking.cpp
